--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+.App{
+  margin: 5%;
+}
+.navigation {
+  margin: 2%;
+}
+input {
+margin: 1%;
+padding: 5px;
+border-radius: 5px;
+}
+button {
+  padding: 5px;
+  width: 100px;
+  border-radius: 5px;
+}
+.fiends {
+  background-color: indianred;
+  width: 30%;
+  padding: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.friendscard {
+  background-color: green;
+  margin: 2%;
+  width: 50%;
+  padding: 3px;
 }
