some CSS styels added

--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -24,12 +24,27 @@ button:hover {
 .fiends {
   background-color: indianred;
   width: 30%;
-  padding: 5px;
+  padding: 8px;
+  border-radius: 20px 0px 0px 20px;
 }
 
 .friendscard {
-  background-color: green;
+  background-color: rgb(210, 240, 38);
   margin: 2%;
   width: 50%;
-  padding: 3px;
+  padding: 5px;
+  box-shadow: rgb(179, 177, 172) 2px 5px 8px 4px;
+  border-radius: 20px;
+}
+.loginform {
+  background-color: rgb(210, 240, 38);
+  padding: 20px;
+  height: 600px;
+  width: 300px;
+  border-radius: 20px;
+  margin: 20px;
+  box-shadow: rgb(179, 177, 172) 2px 5px 8px 4px;
+}
+.formclass {
+ padding: 20px;
 }
